--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "bookmark-summary",
+	"name": "Bookmark Summary",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Generate SUMMARY.md from bookmarks",
+	"author": "zhxlp",
+	"authorUrl": "https://github.com/zhxlp",
 	"isDesktopOnly": false
 }
